apps/n8n/service-n8n.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  type: ClusterIP
  ports:
    - port: 5678
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: n8n
