apps/n8n/ingressroute-n8n.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.xrs444.net`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
